# portal_informacion_provincial

./: README.md  pyproject.toml
app/: __init__.py  models.py  routes.py
app/static/css/: styles.css
app/static/js/: recursos.js
app/templates/: base.html  dashboard.html  login.html  portal.html  recursos_provinciales.html
data/: recaudacion_nacional.csv  recursos_provinciales.csv  transferencias_nacionales.csv
docs/: estructura_datos.md
scripts/: import_csv.py
