[project]
name = "portal-informacion-provincial"
version = "0.1.0"
description = "Portal Flask para tableros de informacion provincial"
requires-python = ">=3.12"
dependencies = [
  "Flask==3.0.3",
  "Flask-SQLAlchemy==3.1.1",
  "pandas==2.2.2",
  "plotly==5.24.1",
  "python-dotenv==1.0.1",
  "openpyxl==3.1.5",
  "psycopg2-binary==2.9.9",
]

[tool.vercel]
entrypoint = "run:app"
